# euclidius

./: .env  .gitignore  Cargo.toml
assets/euclidius/templates/: index.handlebars
assets/templates/: create-page.handlebars  not-found.handlebars
migrations/: 001000000001_create_users_table.up.sql  001000000002_create_pages_table.up.sql  001000000002_create_revisions_table.up.sql  001000000003_create_pages_table.up.sql  001000000004_alter_revisions_add_pages_reference.down.sql  001000000004_alter_revisions_add_pages_reference.up.sql
src/: app.rs  db.rs  error.rs  lib.rs  main.rs  req.rs  request.rs  route.rs
src/app/: route.rs
src/app/route/: load.rs  page.rs  root.rs
src/route/: page.rs  root.rs
