[package]
name = "euclidius"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15.7" }

tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "net"] }
axum = { version = "0.7.5", features = ["macros", "http2", "multipart"] }

sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
