[package]
name = "euclidius"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.206", features = ["derive"] }
serde_json = { version = "1.0.124" }
time = { version = "0.3.36", features = ["macros"] }

dotenvy = { version = "0.15.7" }
handlebars = { version = "6.0.0" }

tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "net"] }
axum = { version = "0.7.5", features = ["macros", "http2", "multipart"] }

sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
